# fitmeai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: 00-fitme-shared-context.md  01-fitme-orchestrator.md  02-fitme-ai-tryon-agent.md  03-fitme-backend-agent.md  04-fitme-frontend-agent.md  05-fitme-body-fit-agent.md  06-fitme-compliance-agent.md  07-fitme-product-scraping-agent.md  08-fitme-devops-agent.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_tryon_jobs.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py  routes_health.py  routes_tryon.py  schemas.py
apps/api/app/core/: __init__.py  config.py  logging.py
apps/api/app/db/: __init__.py  base.py  models.py  repository.py
apps/api/app/domain/: __init__.py  enums.py  models.py
apps/api/app/queue/: __init__.py  base.py  redis_queue.py
apps/api/app/tryon/: __init__.py  errors.py  factory.py  provider.py
apps/api/app/tryon/providers/: __init__.py  mock.py
apps/api/tests/: conftest.py  test_api.py  test_domain_models.py  test_tryon_provider.py
apps/web/: README.md
docs/: architecture.md  local-setup.md
workers/tryon/: README.md  pyproject.toml  worker.py
workers/tryon/tests/: conftest.py  test_worker.py
