[project]
name = "fitme-api"
version = "0.1.0"
description = "Fitme.ai backend (FastAPI) — API, domain models, job orchestration"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
